--- a/src/app/profil/edit-work/edit-work.component.html
+++ b/src/app/profil/edit-work/edit-work.component.html
@@ -18,7 +18,7 @@
 <div class="rpbox" *ngIf=" role!='1' ">
     <div class="boxarchive container">
         <div class="btn_retour mb-5">
-            <button routerLink='/ownedwork'><a>🢀 Back</a></button>
+            <button [routerLink]="['/EditProfil',proj.user_id]"><a>🢀 Back</a></button>
         </div>
         <div class="part1">
             <div class="box-1 boxarchive container ">
@@ -29,7 +29,7 @@
                     <div class="me-sm-4">
                         <div class="row justify-content-md-center mb-5 me-sm-5">
                             <div class="avatar-upload me-sm-5">
-                            
+
                                 <div class="avatar-edit">
                                     <input type='file' id="imageUpload" (change)="onChange($event)" formControlName="img"
                                         accept=".png, .jpg, .jpeg" />
@@ -39,7 +39,7 @@
                                 <div class="avatar-preview ">
                                     <img [src]="imgpath+proj.img">
                                 </div>
-        
+
                             </div>
                         </div>
                     </div>
@@ -49,59 +49,59 @@
                         <label for="validationServer01">Title</label>
                         <input formControlName="title" type="text" [(ngModel)]="proj.title" class="form-control p-3" id="validationServer01"
                           placeholder="Project title">
-          
+
                       </div>
                       <div class="col-md-5 mb-4 mx-4 ">
                         <label for="validationServer02">Domain</label>
                         <input [(ngModel)]="proj.domain" type="text" formControlName="domain" class="form-control p-3" placeholder="Domain" required>
-          
+
                       </div>
-          
+
                     </div>
                     <div class="row justify-content-md-center">
-          
-                    
-          
+
+
+
                       <div class="col-md-5 mb-4 mx-4">
                         <label for="validationServer03">Nombre de stagaires</label>
                         <input [(ngModel)]="proj.nb_stagaires" type="number" formControlName="nb_stagaires" class="form-control p-3"
                           placeholder="Nombre de stagaires..." required>
-          
+
                       </div>
-          
+
                     </div>
                     <div class="row justify-content-md-center">
-          
-          
+
+
                       <div class="col-md-5 mb-4 mx-4">
-          
+
                         <label for="validationServer03">Technologies</label>
-          
+
                         <ejs-multiselect id='multiselectelement' [dataSource]='datas' [ngModel]="datas1" formControlName="technologies" placeholder='Find a item'>
                           <ng-template #noRecordsTemplate>
                             <span class='norecord'> NO DATA AVAILABLE</span>
                           </ng-template>
                         </ejs-multiselect>`
                       </div>
-          
+
                       <div class="col-md-5 mb-4 mx-4">
                         <label for="validationServer03">Description</label>
                         <textarea type="text" [(ngModel)]="proj.description" formControlName="description" class="form-control "
                           placeholder="Description"></textarea>
-          
+
                       </div>
-        
-          
+
+
                     </div>
-          
-                 
+
+
                     <div class="row justify-content-md-center">
-          
-          
+
+
                       <button (click)="onSubmitProject()" class="btn btn-primary col-md-2" type="submit">Submit</button>
-          
+
                     </div>
-          
+
                   </form>
 
 
@@ -116,7 +116,7 @@
 <div class="rpbox" *ngIf=" role=='1' ">
     <div class="boxarchive container">
         <div class="btn_retour mb-5">
-            <button routerLink='/ownedwork'><a>🢀 Back</a></button>
+            <button [routerLink]="['/EditProfil',proj.user_id]"><a>🢀 Back</a></button>
         </div>
         <div class="part1">
             <div class="box-1 boxarchive container ">
@@ -126,7 +126,7 @@
                     <div class="">
                         <div class="row justify-content-md-center mb-5">
                             <div class="avatar-upload ">
-                            
+
                                     <div class="avatar-edit">
                                         <input type='file' id="imageUpload" (change)="onChange($event)" formControlName="cv"
                                             accept=".png, .jpg, .jpeg" />
@@ -137,12 +137,12 @@
                                         <p><a style="text-decoration: none;" href="http://127.0.0.1:8000/storage/post/{{app.cv}}" download>
                                                                    download <i class="fa-solid fa-download"></i></a> </p>
                                     </div>
-                            
+
                                 </div>
                         </div>
                     </div>
-                    
-                    
+
+
                     <div class="row justify-content-md-center">
                         <div class="col-md-5 mb-4 mx-4">
                             <label for="validationServer01">Email</label>
@@ -158,7 +158,7 @@
                         </div>
 
                     </div>
-                   
+
 
                     <div class="row justify-content-md-center">
 
