--- a/src/styles.css
+++ b/src/styles.css
@@ -1,33 +1,107 @@
-
- @import '../node_modules/@syncfusion/ej2-base/styles/material.css';
- @import '../node_modules/@syncfusion/ej2-buttons/styles/material.css';
- @import '../node_modules/@syncfusion/ej2-calendars/styles/material.css';
- @import '../node_modules/@syncfusion/ej2-dropdowns/styles/material.css';
- @import '../node_modules/@syncfusion/ej2-inputs/styles/material.css';
- @import '../node_modules/@syncfusion/ej2-lists/styles/material.css';
- @import '../node_modules/@syncfusion/ej2-popups/styles/material.css';
- @import '../node_modules/@syncfusion/ej2-navigations/styles/material.css';
- @import '../node_modules/@syncfusion/ej2-angular-schedule/styles/material.css';
-
-
- @import '../node_modules/@syncfusion/ej2-base/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-base/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-buttons/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-calendars/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-dropdowns/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-inputs/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-lists/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-popups/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-navigations/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-angular-schedule/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-base/styles/material.css';
 @import '../node_modules/@syncfusion/ej2-buttons/styles/material.css';
 @import '../node_modules/@syncfusion/ej2-dropdowns/styles/material.css';
 @import '../node_modules/@syncfusion/ej2-inputs/styles/material.css';
 @import '../node_modules/@syncfusion/ej2-popups/styles/material.css';
 @import '../node_modules/@syncfusion/ej2-lists/styles/material.css';
 @import '../node_modules/@syncfusion/ej2-angular-dropdowns/styles/material.css';
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family:"calibri", sans-serif;
-    }
-
-    div#js-licensing {
-        display: none;
-    }
 
 
 
-   
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "calibri", sans-serif;
+}
+
+div#js-licensing {
+  display: none;
+}
+
+
+
+/********************  Preloader Demo-20 *******************/
+.loader20, .loader20:after, .loader20:before {
+  border-radius: 50%
+}
+
+.loader20:after, .loader20:before {
+  position: absolute;
+  content: ''
+}
+
+.loader20:before {
+  width: 5.2em;
+  height: 10.2em;
+  background: #ffffff;
+  border-radius: 10.2em 0 0 10.2em;
+  top: -.1em;
+  left: -.1em;
+  -webkit-transform-origin: 5.2em 5.1em;
+  transform-origin: 5.2em 5.1em;
+  -webkit-animation: load20 2s infinite ease 1.5s;
+  animation: load20 2s infinite ease 1.5s
+}
+
+.loader20 {
+  font-size: 11px;
+  text-indent: -99999em;
+margin: 55px auto;
+  position: relative;
+  top: 50%; left: 50%; /* à 50%/50% du parent référent */
+  margin-left: auto;
+  margin-right: auto;
+  width: 10em;
+  height: 10em;
+  box-shadow: inset 0 0 0 1em #0081C2;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0)
+}
+
+.loader20:after {
+  width: 5.2em;
+  height: 10.2em;
+  background: #ffffff;
+  border-radius: 0 10.2em 10.2em 0;
+  top: -.1em;
+  left: 5.1em;
+  -webkit-transform-origin: 0 5.1em;
+  transform-origin: 0 5.1em;
+  -webkit-animation: load20 2s infinite ease;
+  animation: load20 2s infinite ease
+}
+
+@-webkit-keyframes load20 {
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0)
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg)
+  }
+}
+
+@keyframes load20 {
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0)
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg)
+  }
+}
