--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,8 +1,5 @@
 <!-- Start Banner Hero -->
-<div class="col-md-12" *ngIf="loader==true">
-  <div class="loader20">Loading...</div>
-</div>
-<div id="template-mo-zay-hero-carousel" class="carousel slide " data-bs-ride="carousel" *ngIf="loader==false">
+<div id="template-mo-zay-hero-carousel" class="carousel slide " data-bs-ride="carousel" >
   <ol class="carousel-indicators">
     <li class="active"></li>
     <li></li>
@@ -70,7 +67,7 @@
 </div>
 <!---------part2:departement boxs----------------------->
 
-<div class="departements" *ngIf="loader==false">
+<div class="departements" >
   <div class="titre">
 
     <h3 name="1" class="titre">DEPARTMENTS</h3>
@@ -178,7 +175,7 @@
 <!----------------------------------------->
 <!------------------part3:recent project----------------------->
 
-<div class="recentproject" *ngIf="loader==false">
+<div class="recentproject" >
   <h3 class="title">RECENT PROJECTS</h3>
   <div id="template-mo-zay-hero-carousel" class="carousel slide " data-bs-ride="carousel">
     <ol class="carousel-indicators">
@@ -297,7 +294,7 @@
 
 </div>
 <!------------------part4:partner----------------------->
-<div class="mt-5" *ngIf="loader==false">
+<div class="mt-5" >
   <div class="container mt-5">
     <h2 class="title mt-5 ">PARTNERS</h2>
   </div>
