--- a/src/app/Layouts/header/header.component.html
+++ b/src/app/Layouts/header/header.component.html
@@ -59,7 +59,7 @@
                   <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
-                  <a routerLink="/djagoraacadimy">Djagora Academy</a>
+                  <a routerLink="/djagoraacadimy/formations">Djagora Academy</a>
                   <a routerLink="/notfound">Djagora Fablab</a>
                 </div>
               </div>
@@ -86,7 +86,7 @@
 
         <div *ngIf="auth=='true'">
           <!--<img [src]="imgpath+profil.img" class="profileimg" >-->
-         
+
 
 
           <div (click)="setOldnotifs()" class="notif-btn">
