--- a/src/app/profil/my-profil/my-profil.component.css
+++ b/src/app/profil/my-profil/my-profil.component.css
@@ -1,6 +1,5 @@
 
 
-
 body{
   display: flex;
   justify-content: center;
@@ -955,4 +954,66 @@ margin-left: 97%;
 .downvote:hover{
   color: white;
   background-color: red;
+}
+.who_we_are {
+  margin-top: 100px;
+}
+
+
+.rpbox {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.rpsbox {
+  display: flex;
+  flex-direction: row;
+  border-radius: 15px;
+  border: 2px solid #edf2f4;
+  background-color: white;
+  box-shadow: 0 0 5pt 1pt hsla(0, 2%, 88%, 0.308);
+  padding: 50px;
+
+}
+@media (max-width:1150px){
+  .rpsbox {
+
+    flex-direction: column;
+  }
+}
+
+.rpsbox img {
+
+  width: 400px;
+  height: 300px;
+  border-radius: 15px;
+}
+
+.content {
+  padding-left: 40px;
+}
+
+.content p {
+  padding-right: 30px;
+  padding-top: 50px;
+}
+.titre {
+  text-align: center;
+  margin: 80px auto 100px;
+  position: relative;
+  line-height: 60px;
+  color: #555;
+}
+
+.titre::after {
+  content: '';
+  background: #0081c2;
+  width: 80px;
+  height: 5px;
+  border-radius: 5px;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
 }
