--- a/src/app/pages/djagora-academy/formations/formations.component.html
+++ b/src/app/pages/djagora-academy/formations/formations.component.html
@@ -44,55 +44,17 @@
       <h1 name="1">FORMATION</h1>
     </div>
 
-    <div class="rpsbox container">
-      <img class="card-img-top" src="assets/img/contact.jpg" alt="Card image cap">
+    <div class="rpsbox container" *ngFor="let p of formations">
+      <img class="card-img-top" [src]="imgpath+p.img" alt="Card image cap">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <h5 class="card-title">{{ p.name }}</h5>
+        <p class="card-text">{{p.description}}</p>
+        <p class="card-text"><small class="text-muted">{{ p.name }}</small></p>
 
       </div>
     </div>
-    <div class="rpsbox container">
-      <img class="card-img-top" src="assets/img/a.jpg" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
 
-      </div>
-    </div>
-    <div class="rpsbox container">
-      <img class="card-img-top" src="assets/img/a.jpg" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
 
-      </div>
-    </div>
-    <div class="rpsbox container">
-      <img class="card-img-top" src="assets/img/a.jpg" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
 
-      </div>
-    </div>
-    <div class="rpsbox container">
-      <img class="card-img-top" src="assets/img/a.jpg" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-
-      </div>
-    </div>
-  </div>
+  </div><br> <br><br>
 </div>
