--- a/src/app/pages/djagora-academy/formations/formations.component.html
+++ b/src/app/pages/djagora-academy/formations/formations.component.html
@@ -34,9 +34,6 @@
     </div>
   </div>
 </div>
-
-
-
 <div class="who_we_are ">
   <div class="rpbox ">
     <div class="titre">
@@ -49,7 +46,7 @@
       <div class="card-body">
         <h5 class="card-title">{{ p.name }}</h5>
         <p class="card-text">{{p.description}}</p>
-        <p class="card-text"><small class="text-muted">{{ p.name }}</small></p>
+        <p class="card-text" ><small class="text-muted">{{p.formateur}}</small></p>
 
       </div>
     </div>
