--- a/src/app/Components/contact/contact.component.html
+++ b/src/app/Components/contact/contact.component.html
@@ -20,7 +20,7 @@
         <div class="d-flex mb-3 flex-column">
 
         </div>
-        <form class="row mb-3">
+        <form class="row mb-3" [formGroup]="contactForm">
           <div class="col-md-6 p-3">
             <input required placeholder="full name" formControlName="name" type="text" name="" id="" />
           </div>
